--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
 
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.hibernate.ddl-auto=create
+springdoc.api-docs.path=/api-docs
